--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,4 @@ jobs:
       run: composer install
     # 执行 PHPUnit 测试
     - name: PHPUnit check
-      run: ./vendor/bin/phpunit --coverage-text
+      run: ./vendor/bin/phpunit
